2024-09-28
 - create autoexec NVS entry at the right place (not only whne BT is enabled!
 - try to make i2s panic mode work for all esp versions

2024-09-12
- add AW9523 GPIO expander credits @Stefan Krupop (https://github.com/sle118/squeezelite-esp32/pull/430

2024-09-10
- Merge pull request # 439 from digidocs/eq_update_fix2 (# 309)
- Fix for I2S noise burst when ESP32 panic occurs (# 437)

2024-05-05
 - Fix crash when led_vu is configured without display
2024-01-27
 - complete libflac fix and add chaining enablement
 - fixed stream Ogg demux issue with unknown granule
 
2024-01-19
 - fixed libflac with OggFlac
 - AirPlay missed frame logging
 
2024-01-16
 - catch-up with cspot latest
 - refactor airplay flush/first packet
 - new libFLAC that supports multi-stream OggFlac
 - fix output threshold
 - log missed frames
 
2024-01-10
 - add OggFlac to stream metadata
 - fix OggFlac deadlock in flac callback when not enough data in streambuf
 - fix no displayer due to threadshold too high (use 500ms instead)
 - reset outputbuf when cspot starts
 
2024-01-01
 - ogg stream are parsed to foward metadata to LMS
 - fix some ogg parsing on multi-stream containers
 
2023-11-19
 - more robust (?) airplay RTP frame recovery
 - initialize of scratch string in monitor (trying to figure out random reboot)

2023-11-16
 - add SH1122 support
 - optimize GDS DrawPixel function
 
2023-11-09
 - force gpio_pad_select_gpio in dac_controlset in case somebody uses UART gpio's (or other pre-programmed)
 
2023-11-08
 - execute dac_controlset even when there is no i2s (for gpio)
 
2023-11-07
 - led-vu gain + misc fixes
 - bump plugin version to 0.600
 
2023-11-03
 - don't reboot when external decoder is connected even with a LMS server
 
2023-10-28
 - fix recovery size (remove bootstrap)
 - improve NVS initialization structure

2023-10-27
 - fix vorbis (and opus) memory leak
 
2023-10-25
 - fix vorbis codec close

2023-10-23
 - fix Spotify track insertion