@@ -1,4 +1,8 @@
 2024-09-28
+ - add dedicated volume encoder
+ - fix memory leak in rotary config creation
+ 
+2024-09-28
  - create autoexec NVS entry at the right place (not only whne BT is enabled!
  - try to make i2s panic mode work for all esp versions
 
